--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -73,14 +73,41 @@ header .icon {
   padding-left: .75rem;
 }
 
+/*added code*/
+/*header .tablet {
+  display: none;
+}*/
+/*end added code*/
+
 header .mobile {
   display: none;
 }
 
-@media only screen and (max-width: 760px) {
+/*added code*/
+/*@media only screen and (max-width: 760px) {
   header .desktop {
     display: none;
   }
+
+  header .tablet .button {
+    padding: .1875rem .5rem;
+    background-color: #9dc20b;
+    line-height: 1.6;
+    color: white;
+  }
+}*/
+/*end added code*/
+
+@media only screen and (max-width: 760px) { /*changed 760 to 450*/
+  header .desktop {
+    display: none;
+  }
+
+/*added code*/
+/*  header .tablet {
+    display: none;
+  }*/
+/*end added code*/
 
   header .mobile {
     display: block;
