--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,7 +18,11 @@ html {
   border-radius: 4px;
   background-color: #4a4a4a;
   color: white;
-}
+  padding: .1875rem .5rem;
+  background-color: #9dc20b;
+  line-height: 1.6;
+  color: white;
+  }
 
 .image-container {
   overflow: hidden;
@@ -28,9 +32,9 @@ html {
   display: block;
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 450px) {
   .main-content {
-    top: 2.5625rem;
+    top: 3rem;
   }
 }
 
@@ -73,41 +77,22 @@ header .icon {
   padding-left: .75rem;
 }
 
-/*added code*/
-/*header .tablet {
-  display: none;
-}*/
-/*end added code*/
-
 header .mobile {
   display: none;
 }
 
 /*added code*/
-/*@media only screen and (max-width: 760px) {
+@media only screen (min-width: 761px) and (max-width: 1024px) {
+  header .desktop .button {
+    display: none;
+  }
+}
+/*end added code*/
+
+@media only screen and (max-width: 450px) { /*changed 760 to 450*/
   header .desktop {
     display: none;
   }
-
-  header .tablet .button {
-    padding: .1875rem .5rem;
-    background-color: #9dc20b;
-    line-height: 1.6;
-    color: white;
-  }
-}*/
-/*end added code*/
-
-@media only screen and (max-width: 760px) { /*changed 760 to 450*/
-  header .desktop {
-    display: none;
-  }
-
-/*added code*/
-/*  header .tablet {
-    display: none;
-  }*/
-/*end added code*/
 
   header .mobile {
     display: block;
